Updates the video element to use the over() and out() functions. (generated by blackbox.ai )

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="col-l">
             
             <!-- this is a placeholder replace it with a real video -->
-            <video onmouseover="over()" onmouseout="out()" id="myVideo" width="100%" height="240" controls>
+            <video onmouseover="over(this)" onmouseout="out(this)" id="myVideo" width="100%" height="240" controls>
                 <source src="assets/video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
